Efmub-Ogy/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>General Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalation</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
        <values>
            <fullName>Print Letter Complete</fullName>
        </values>
        <values>
            <fullName>Print Letter Pending</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
        <values>
            <fullName>Route Out</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Related_Data__c</fullName>
        <label>Account Related Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Case_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Case Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Source__c</fullName>
        <label>Booking Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket_List__c</fullName>
        <description>Delta CC - US-29 - Req-178</description>
        <label>Bucket List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actionable</fullName>
                </value>
                <value>
                    <fullName>Unreasonable</fullName>
                </value>
                <value>
                    <fullName>Inexperienced Traveler</fullName>
                </value>
                <value>
                    <fullName>Non-Actionable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier_Code__c</fullName>
        <description>carrier code from web</description>
        <label>Web CarrierCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Arrival_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Delta CC - US-29 - Req-111, 124, 137, 138, 142, 106</description>
        <label>Case Arrival Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Complaint_Count__c</fullName>
        <label>Case Complaint Count</label>
        <summaryForeignKey>Case_Complaint__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Summary__c</fullName>
        <label>Case Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Challenge_Case_To_Code__c</fullName>
        <label>Challenge Case To Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Challenge_Case_To__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EV</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>G7</fullName>
                </value>
                <value>
                    <fullName>9E</fullName>
                </value>
                <value>
                    <fullName>S5</fullName>
                </value>
                <value>
                    <fullName>OO</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
                <value>
                    <fullName>Code Change</fullName>
                </value>
                <value>
                    <fullName>Opinion</fullName>
                </value>
                <value>
                    <fullName>Request for Information</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>3M</fullName>
                </value>
                <value>
                    <fullName>9W</fullName>
                </value>
                <value>
                    <fullName>A0</fullName>
                </value>
                <value>
                    <fullName>A9</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AV</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>B6</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challenge_Case_To__c</fullName>
        <description>Delta CC - US-29 - Req-175</description>
        <label>Challenge Case To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DCI</fullName>
                </value>
                <value>
                    <fullName>DOT</fullName>
                </value>
                <value>
                    <fullName>OTA</fullName>
                </value>
                <value>
                    <fullName>OA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challenge_Comments__c</fullName>
        <description>Delta CC - US-29 - Req-177</description>
        <label>Challenge Comments</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Challenge_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delta CC - US-29 - Req-176</description>
        <label>Challenge Review Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Challenge_Status__c</fullName>
        <description>Delta CC - US-29 - Req-174</description>
        <label>Challenge Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challengeable__c</fullName>
        <description>Delta CC - US-29 - Req-173, 278</description>
        <label>Challengeable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Amount__c</fullName>
        <label>Claim Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_City__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Complaint City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Location__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Complaint Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS Gate</fullName>
                </value>
                <value>
                    <fullName>ACS Ticket Counter</fullName>
                </value>
                <value>
                    <fullName>Inflight</fullName>
                </value>
                <value>
                    <fullName>Flight Ops</fullName>
                </value>
                <value>
                    <fullName>Baggage</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Refunds</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Reservations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concord_ID__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Concord ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacted_DOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer contacted the DOT.</description>
        <inlineHelpText>The customer contacted the DOT.</inlineHelpText>
        <label>Contacted DOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Alerts__c</fullName>
        <formula>IF( 
Contacted_DOT__c,IMAGE(&quot;/resource/Image_png_Contacted_DOT&quot;, &quot;Contacted DOT&quot;),&apos;&apos;
)&amp; &quot; &quot; &amp;
IF( 
Threatened_DOT__c,IMAGE(&quot;/resource/Image_png_threatened_dot&quot;, &quot;Threatened DOT&quot;),&apos;&apos; 
)&amp; &quot; &quot; &amp;
IF( 
Legal__c,IMAGE(&quot;/resource/Image_png_legal&quot;, &quot;Legal&quot;),&apos;&apos; 
)&amp; &quot; &quot; &amp;
IF( 
Warning_Letter__c,IMAGE(&quot;/resource/Image_png_warning_letter&quot;, &quot;Warning Letter&quot;),&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOT_Case_Number__c</fullName>
        <description>Delta CC - US-29 - Req-170</description>
        <label>DOT Case Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOT_Case_Period_Month__c</fullName>
        <label>DOT Case Period Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOT_Case_Period_Year__c</fullName>
        <label>DOT Case Period Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOT_Category__c</fullName>
        <description>Delta CC - US-29 - Req-102</description>
        <label>DOT Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>Official Tarmac Delay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOT_Complaint_Code__c</fullName>
        <label>DOT Complaint Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOT_Date__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>DOT Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOT_Indicator__c</fullName>
        <formula>ISPICKVAL( Received_Via__c , &quot;DOT&quot;)</formula>
        <label>DOT Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOT_Operational_Area__c</fullName>
        <description>Delta CC - US-29 - Req-179, 179a</description>
        <label>DOT Operational Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOT_Reply_Sent_Date__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>DOT Reply Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOT_Secondary_Operational_Area__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>DOT Secondary Operational Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOT_Threat__c</fullName>
        <label>DOT Threat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unable to Determine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Integrity_Score__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Data Integrity Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateOfFlight__c</fullName>
        <description>web flight date</description>
        <label>Web Flight Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denied_Bag_Claim_Reason__c</fullName>
        <label>Denied Bag Claim Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Timeliness</fullName>
                </value>
                <value>
                    <fullName>Outside of Tariff</fullName>
                </value>
                <value>
                    <fullName>No Supporting Documents</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depart_Destination__c</fullName>
        <label>Web Depart Destination</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depart_Orgin__c</fullName>
        <label>Web Depart Orgin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability_Code_Required__c</fullName>
        <label>Disability Code Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOT disability code is required</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>DOT disability code is not required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDW_ID__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>EDW ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclusion_Amount__c</fullName>
        <label>Exclusion Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exclusion_Reason__c</fullName>
        <label>Exclusion Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Artistic Items</fullName>
                </value>
                <value>
                    <fullName>Cash High Value</fullName>
                </value>
                <value>
                    <fullName>Confiscation of Items by Local Government</fullName>
                </value>
                <value>
                    <fullName>Cremains</fullName>
                </value>
                <value>
                    <fullName>Electronic or Mechanical Items</fullName>
                </value>
                <value>
                    <fullName>Fragile Items</fullName>
                </value>
                <value>
                    <fullName>Jewelry or Precious Metals</fullName>
                </value>
                <value>
                    <fullName>Musical instrumentals and Equipment</fullName>
                </value>
                <value>
                    <fullName>Perishable Items</fullName>
                </value>
                <value>
                    <fullName>Photographic/Cinematographic Equipment</fullName>
                </value>
                <value>
                    <fullName>Precision Items</fullName>
                </value>
                <value>
                    <fullName>Religious Totems/Artifacts</fullName>
                </value>
                <value>
                    <fullName>Security Non-Sanctioned Items</fullName>
                </value>
                <value>
                    <fullName>Sporting Goods</fullName>
                </value>
                <value>
                    <fullName>Valuable Papers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPoC_Details__c</fullName>
        <label>FPoC Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FPoC_Offered__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>$10</fullName>
                </value>
                <value>
                    <fullName>$25</fullName>
                </value>
                <value>
                    <fullName>$50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPoC_Handled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>FPoC Handled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPoC_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>FPoC Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPoC_Reason__c</fullName>
        <label>FPoC Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FPoC_Handled__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FasTrak_Number__c</fullName>
        <label>FasTrak Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number__c</fullName>
        <label>Web Flight Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flying_Blue_Tier__c</fullName>
        <label>Flying Blue Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HdnEmail__c</fullName>
        <description>HdnEmailFeild</description>
        <label>HdnEmail</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HdnFullName__c</fullName>
        <label>HdnFullName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hot_Topic__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Hot Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inbound_Language__c</fullName>
        <label>Inbound Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer has a pending legal case with Delta.</description>
        <inlineHelpText>The customer has a pending legal case with Delta.</inlineHelpText>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Litigation_Status__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Litigation Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Litigation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Litigation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Litigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MS_Access_ID__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>MS Access ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Merge_Country__c</fullName>
        <formula>CASE(Contact.MailingCountry, &apos;USA&apos;, &apos; &apos;,&apos;US&apos;, &apos; &apos;, &apos;us&apos;, &apos; &apos;, &apos;usa&apos;, &apos; &apos;, &apos;united states&apos;, &apos; &apos;,&apos;United States&apos;, &apos; &apos;, &apos;UNITED STATES&apos;, &apos; &apos;,Contact.MailingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mail Merge Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Merge_Owner_Name__c</fullName>
        <formula>$User.FirstName &amp; &apos; &apos; &amp; $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mail Merge Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Merge_Salutation__c</fullName>
        <formula>IF(CONTAINS(TEXT(Contact.Salutation), &apos;.&apos;), TEXT(Contact.Salutation), TEXT(Contact.Salutation) + &apos;.&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mail Merge Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Merge_Suffix__c</fullName>
        <formula>IF(Contact.Suffix = &apos;&apos;, &apos; &apos;, Contact.Suffix)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mail Merge Suffix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Merge_Temp_Field_Test__c</fullName>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mail Merge Temp Field Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Merge_Today__c</fullName>
        <formula>CASE( MONTH(Today() ) , 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
&quot;December&quot;) +&apos; &apos;+ text(DAY( Today() )) +&apos;, &apos;+ Text(YEAR( Today() ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mail Merge Today</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Contact__c</fullName>
        <label>Outgoing Method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Bags__c</fullName>
        <label>Number of Bags</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OA_Challenge_Contact__c</fullName>
        <label>OA Challenge Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_of_Relationship__c</fullName>
        <label>On Behalf of Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Family Member</fullName>
                </value>
                <value>
                    <fullName>Travel Agent</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outbound_Language__c</fullName>
        <label>Outbound Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PNR__c</fullName>
        <label>PNR</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Age__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <formula>Contact.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passenger Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passenger_Number__c</fullName>
        <description>Delta CC - US-29 - Req-94</description>
        <label>Passenger Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payout_Amount__c</fullName>
        <formula>Claim_Amount__c -  Exclusion_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payout Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Status_Reason__c</fullName>
        <label>Pending Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Customer Response</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrefixTicket__c</fullName>
        <label>Web prefixTicket</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Letter_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Letter Complete</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>